Added custom query blocks.

--- a/research-press/templates/taxonomy.html
+++ b/research-press/templates/taxonomy.html
@@ -6,10 +6,10 @@
      <!-- wp:heading {"level":2,"textAlign":"center"} -->
      <h2 class="wp-block-heading has-text-align-center">Research Memos</h2>
      <!-- /wp:heading -->
-	<!-- wp:pattern {"slug":"research-press/research-memo-query-loop"} /-->
+     <!-- wp:research-press/query {"postType":"research-memo"} /-->
      <!-- wp:heading {"level":2,"textAlign":"center"} -->
      <h2 class="wp-block-heading has-text-align-center">Sources</h2>
      <!-- /wp:heading -->
-	<!-- wp:pattern {"slug":"research-press/source-query-loop"} /-->
+     <!-- wp:research-press/query {"postType":"source"} /-->
 </main>
 <!-- /wp:group -->
