--- a/research-press/templates/archive-source.html
+++ b/research-press/templates/archive-source.html
@@ -2,6 +2,6 @@
 <!-- wp:group {"tagName":"main","style":{"spacing":{"margin":{"top":"var:preset|spacing|60"}}},"layout":{"type":"constrained"}} -->
 <main class="wp-block-group" style="margin-top:var(--wp--preset--spacing--60)">
     <!-- wp:query-title {"type":"archive","showPrefix":false} /-->
-	<!-- wp:pattern {"slug":"research-press/source-query-loop"} /-->
+    <!-- wp:research-press/query {"postType":"source"} /-->
 </main>
 <!-- /wp:group -->
